Añadido todas las imagenesFIX

--- a/gallery.html
+++ b/gallery.html
@@ -48,8 +48,79 @@
 <section class="photo-gallery">
   <h2>📸 Galería de Fotos</h2>
   <p class="gallery-sub">Tomas de rodaje y retratos</p>
-  <div class="photo-grid">
-    <div class="photo-item">
+
+<div class="photo-grid">
+
+  <!-- RETRATOS -->
+  <div class="photo-item">
+    <img src="assets/photos/DAVID SORIANO 455.jpg" alt="DAVID SORIANO 455" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/DAVID SORIANO 3.jpeg" alt="DAVID SORIANO 3" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/DAVID SORIANO 431.jpg" alt="DAVID SORIANO 431" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/David SOriano 2.jpg" alt="David Soriano 2" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/DAVID SORIANO 4.jpeg" alt="DAVID SORIANO 4" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/DAVID SORIANO 5.jpeg" alt="DAVID SORIANO 5" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/DAVID SORIANO 1.jpeg" alt="DAVID SORIANO 1" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/DAVID SORIANO 2.jpeg" alt="DAVID SORIANO 2" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/David Soriano 3.jpg" alt="David Soriano 3" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/David Soriano 5.png" alt="David Soriano 5" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/David Soriano 6.png" alt="David Soriano 6" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/DAVID SORIANO 412.jpg" alt="DAVID SORIANO 412" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/DAVID SORIANO 418.jpg" alt="DAVID SORIANO 418" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/David Soriano.jpg" alt="David Soriano" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/David Soriano2573.jpg" alt="David Soriano2573" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/David Soriano2574.jpg" alt="David Soriano2574" />
+    <p class="caption">Retrato</p>
+  </div>
+  <div class="photo-item">
+    <img src="assets/photos/David Soriano2761.jpg" alt="David Soriano2761" />
+    <p class="caption">Retrato</p>
+  </div>
+<div class="photo-item">
   <img src="assets/photos/ENERGY SYSTEM ANUNCIO 2015 ESPAÑA.jpg" alt="ENERGY SYSTEM ANUNCIO 2015 ESPAÑA" />
   <p class="caption">ENERGY SYSTEM ANUNCIO 2015 ESPAÑA</p>
 </div>
@@ -58,28 +129,12 @@
   <p class="caption">La cabaña</p>
 </div>
 <div class="photo-item">
-  <img src="assets/photos/DAVID SORIANO 455.jpg" alt="DAVID SORIANO 455" />
-  <p class="caption">DAVID SORIANO 455</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/DAVID SORIANO 3.jpeg" alt="DAVID SORIANO 3" />
-  <p class="caption">DAVID SORIANO 3</p>
-</div>
-<div class="photo-item">
   <img src="assets/photos/Los chicos del llavero 3.jpg" alt="Los chicos del llavero 3" />
-  <p class="caption">Los chicos del llavero 3</p>
+  <p class="caption">Los chicos del llavero</p>
 </div>
 <div class="photo-item">
   <img src="assets/photos/chico conoce chica corto ganador 2014 madrid 2.jpg" alt="chico conoce chica corto ganador 2014 madrid 2" />
-  <p class="caption">chico conoce chica corto ganador 2014 madrid 2</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/DAVID SORIANO 431.jpg" alt="DAVID SORIANO 431" />
-  <p class="caption">DAVID SORIANO 431</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/David SOriano 2.jpg" alt="David Soriano 2" />
-  <p class="caption">David Soriano 2</p>
+  <p class="caption">chico conoce chica corto ganador 2014 madrid</p>
 </div>
 <div class="photo-item">
   <img src="assets/photos/chico conoce chica corto ganador 2014 madrid.jpg" alt="chico conoce chica corto ganador 2014 madrid" />
@@ -90,14 +145,6 @@
   <p class="caption">Animales fantasticos teatro kinepolis</p>
 </div>
 <div class="photo-item">
-  <img src="assets/photos/DAVID SORIANO 4.jpeg" alt="DAVID SORIANO 4" />
-  <p class="caption">DAVID SORIANO 4</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/DAVID SORIANO 5.jpeg" alt="DAVID SORIANO 5" />
-  <p class="caption">DAVID SORIANO 5</p>
-</div>
-<div class="photo-item">
   <img src="assets/photos/ANUNCIO LOTERIA 2013.jpg" alt="ANUNCIO LOTERIA 2013" />
   <p class="caption">ANUNCIO LOTERIA 2013</p>
 </div>
@@ -106,56 +153,12 @@
   <p class="caption">Animales fantasticos show teatro kinepolis</p>
 </div>
 <div class="photo-item">
-  <img src="assets/photos/DAVID SORIANO 1.jpeg" alt="DAVID SORIANO 1" />
-  <p class="caption">DAVID SORIANO 1</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/DAVID SORIANO 2.jpeg" alt="DAVID SORIANO 2" />
-  <p class="caption">DAVID SORIANO 2</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/David Soriano 3.jpg" alt="David Soriano 3" />
-  <p class="caption">David Soriano 3</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/David Soriano 5.png" alt="David Soriano 5" />
-  <p class="caption">David Soriano 5</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/David Soriano 6.png" alt="David Soriano 6" />
-  <p class="caption">David Soriano 6</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/DAVID SORIANO 412.jpg" alt="DAVID SORIANO 412" />
-  <p class="caption">DAVID SORIANO 412</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/DAVID SORIANO 418.jpg" alt="DAVID SORIANO 418" />
-  <p class="caption">DAVID SORIANO 418</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/David Soriano.jpg" alt="David Soriano" />
-  <p class="caption">David Soriano</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/David Soriano2573.jpg" alt="David Soriano2573" />
-  <p class="caption">David Soriano2573</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/David Soriano2574.jpg" alt="David Soriano2574" />
-  <p class="caption">David Soriano2574</p>
-</div>
-<div class="photo-item">
-  <img src="assets/photos/David Soriano2761.jpg" alt="David Soriano2761" />
-  <p class="caption">David Soriano2761</p>
-</div>
-<div class="photo-item">
   <img src="assets/photos/ENERGY SYSTEM ANUNCIO 2 2015.jpg" alt="ENERGY SYSTEM ANUNCIO 2 2015" />
-  <p class="caption">ENERGY SYSTEM ANUNCIO 2 2015</p>
+  <p class="caption">ENERGY SYSTEM ANUNCIO 2015</p>
 </div>
 <div class="photo-item">
   <img src="assets/photos/Halloween games 2.JPG" alt="Halloween games 2" />
-  <p class="caption">Halloween games 2</p>
+  <p class="caption">Halloween games</p>
 </div>
 <div class="photo-item">
   <img src="assets/photos/Halloween games.JPG" alt="Halloween games" />
@@ -163,7 +166,7 @@
 </div>
 <div class="photo-item">
   <img src="assets/photos/hallowen games poster.jpg" alt="halloween games poster" />
-  <p class="caption">halloween games poster</p>
+  <p class="caption">halloween games Poster</p>
 </div>
 <div class="photo-item">
   <img src="assets/photos/La casa de papel 2.JPG" alt="La casa de papel 2" />
@@ -175,11 +178,11 @@
 </div>
 <div class="photo-item">
   <img src="assets/photos/Los chicos del llavero 1.jpg" alt="Los chicos del llavero 1" />
-  <p class="caption">Los chicos del llavero 1</p>
+  <p class="caption">Los chicos del llavero</p>
 </div>
 <div class="photo-item">
   <img src="assets/photos/Los chicos del llavero 2.jpg" alt="Los chicos del llavero 2" />
-  <p class="caption">Los chicos del llavero 2</p>
+  <p class="caption">Los chicos del llavero</p>
 </div>
 <div class="photo-item">
   <img src="assets/photos/Mad fest 2016.jpg" alt="Mad fest 2016" />
@@ -187,7 +190,7 @@
 </div>
 <div class="photo-item">
   <img src="assets/photos/mad fest 2016 2.jpg" alt="mad fest 2016 2" />
-  <p class="caption">mad fest 2016 2</p>
+  <p class="caption">Mad fest 2016</p>
 </div>
 <div class="photo-item">
   <img src="assets/photos/Pablo Berger y David Soriano.JPG" alt="Pablo Berger y David Soriano" />
@@ -195,8 +198,10 @@
 </div>
 <div class="photo-item">
   <img src="assets/photos/trabajando maquillaje.jpg" alt="trabajando maquillaje" />
-  <p class="caption">trabajando maquillaje</p>
+  <p class="caption">Trabajando maquillaje</p>
 </div>
+
+
 
   </div>
 </section>
