Añadido todas las imagenesFIX

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,10 @@
     <h1 class="contact-title">Contacto</h1>
     <p class="contact-sub">Puedes encontrarme aquí:</p>
 
+    <div class="contact-photo">
+      <img src="assets/photos/mi-colega.jpeg" alt="Retrato de David Soriano" />
+    </div>
+
     <div class="contact-info">
       <div class="info-item">
         <img src="assets/icons/location.svg" class="icon" alt="Email" />
