--- a/cv.html
+++ b/cv.html
@@ -40,6 +40,7 @@
         <section class="section">
           <h2>Experiencia – Televisión</h2>
           <ul>
+            <li>""CONFIDENCIAL" – Reparto secundario – Netflix — 2026</li>
             <li>"SIN HUELLAS" – Reparto – Amazon Prime — 2022</li>
             <li>"ENERGY SYSTEM" – Protagonista – Spot — 2018</li>
             <li>"SAVE ME" – Protagonista – Videoclip — 2016</li>
