Añadido todas las imagenesFIX

--- a/gallery.html
+++ b/gallery.html
@@ -220,7 +220,7 @@
       <p><strong>David Soriano</strong></p>
       <p><a href="mailto:davidsorianoactor@gmail.com">davidsorianoactor@gmail.com</a></p>
       <p><a href="tel:+34600291277">+34 600 291 277</a></p>
-      <p>Alicante, España</p>
+      <p>Madrid, España</p>
     </div>
     <p class="copyright">© 2025 David Soriano</p>
   </footer>
