--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <nav>
       <a href="index.html#about">Sobre Mi</a>
       <a href="gallery.html">Videobook</a>
-      <a href="contact.html" class="active">Contactame</a>
+      <a href="contact.html" class="active">Contáctame</a>
       <a href="cv.html" class="btn-cv">CV</a>
     </nav>
   </div>
