--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="#about">Sobre Mi</a>
       <a href="gallery.html">Videobook</a>
-      <a href="contact.html">Contactame</a>
+      <a href="contact.html">Contáctame</a>
        <a href="cv.html" class="btn-cv">CV</a>
     </nav>
   </header>
@@ -25,7 +25,7 @@
           <h1>Actor <br />de Cine <br />y Television</h1>
           <div class="buttons">
             <a href="gallery.html" class="btn primary">▶ Videobook</a>
-            <a href="contact.html" class="btn secondary">Contactame</a>
+            <a href="contact.html" class="btn secondary">Contáctame</a>
           </div>
         </div>
       </div>
