Añadido todas las imagenesFIX

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contacto | David Soriano</title>
   <link rel="stylesheet" href="styles/contact.css" />
+  <link rel="icon" type="image/png" href="assets/icons/image.png" />
 </head>
 <body class="contact-page">
 <header>
