--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Currículum – David Soriano</title>
   <link rel="stylesheet" href="styles/cv.css?v=3" />
+  <link rel="icon" type="image/png" href="assets/icons/image.png" />
 </head>
 <body>
 
