--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
   <!-- Gallery Specific Styles -->
   <link rel="stylesheet" href="styles/gallery.css" />
   <script src="scripts/gallery.js" defer></script>
+  <link rel="icon" type="image/png" href="assets/icons/image.png" />
 </head>
 
 <body class="gallery-page">
